commit eef0b4de3c91b95cb48d33286500a486ea3f4424
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Mar 23 02:13:27 2011 +0900

    aufs: version string for aufs2.1-38
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit b7f6b930cc0671ccbd7ba4cc0f3aff35ee995834
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Tue Mar 22 23:43:56 2011 +0900

    aufs: update donators
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 1c0c29f20a09d1767bfb97348f28b23a056ca5c7
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Mar 2 13:36:35 2011 +0900

    aufs: refine a mutex for mmap 3/3, add a condition
    
    Acquire fi_mmap mutex lock only when necessary, ie. the file is not
    mmapped yet.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 6c4dbe7a9a28134e0246bafbcbdfac1614539fbd
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Mar 2 13:34:55 2011 +0900

    aufs: refine a mutex for mmap 2/3, replace lockdep_off by dep_map
    
    Since it can hide an important debug message, calling lockdep_off/on is
    a bad approach. But aufs_mmap() does it in switching the owner of
    fi_mmap mutex lock. Delegating a top-half of aufs_mmap() and switching
    the owner of fi_mmap is still an ugly approach, but I don't find another
    way.
    Without lockdep_off, the kernel debugging feature produces a false
    message.
    Stop calling lockdep_off/on, use lockdep_acquire/release instead thus we
    can get benefit from the debugging feature.
    This is slightly tricky and a feature for debugging only.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit dcdfe3b9d0e67b2a9636813d452159495d205e92
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Mar 2 13:26:14 2011 +0900

    aufs: refine a mutex for mmap 1/3, move functions and make them static
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit dcb6ad5eba7d9ef18909068285eefbb1cfe5e589